# fpga_demo

./: .gitmodules  README.md
fomu/: README.md
fomu/clash/scheme_interpreter/: cabal.project  feme.cabal  flake.nix  justfile
fomu/clash/scheme_interpreter/src/: main.hs
fomu/doc/: usb_state_machine.drawio
fomu/vhdl/image_processor/: .gitignore  Cargo.toml  README.md  flake.nix  justfile
fomu/vhdl/image_processor/hw/: core.vhd  ice40_prim.vhd  main.vhd  pkg.vhd  rgb.vhd  test.vhd
fomu/vhdl/image_processor/sw/: main.rs
urbana/: README.md
