[package]
name = "sw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sw"
path = "sw/main.rs"

[dependencies]
image = { version = "0.25.9", features = ["rayon", "serde"] }
# inquire = "0.9.1"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.17", features = ["codec"] }
